--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="created_by_rodrigo_amora">Created by Rodrigo Amora</string>
+    <string name="list_people">List people</string>
+    <string name="save_person">Save person</string>
+
 </resources>
