--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,13 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="hint_email_person">E-mail person...</string>
+    <string name="hint_name_person">Name person...</string>
+    <string name="hint_phone_person">Phone person...</string>
+
     <string name="created_by_rodrigo_amora">Created by Rodrigo Amora</string>
     <string name="list_people">List people</string>
+    <string name="save">Save</string>
     <string name="save_person">Save person</string>
 
 </resources>
