--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="alert_email_empty">E-mail is empty!</string>
+    <string name="alert_email_invalid">E-mail invalid!</string>
+    <string name="alert_name_empty">Name is empty!</string>
+    <string name="alert_phone_empty">Phone is empty!</string>
+
     <string name="hint_email_person">E-mail person...</string>
     <string name="hint_name_person">Name person...</string>
     <string name="hint_phone_person">Phone person...</string>
