--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="name">Name:</string>
     <string name="save">Save</string>
     <string name="save_person">Save person</string>
+    <string name="share">Share</string>
     <string name="total">Total:</string>
 
 </resources>
